# ZenASM

./: CMakeLists.txt  README.md  ZenAsm.txt
examples/: advanced.zen  hello.asm  hello.zen  interop.zen
include/zenasm/: ast.hpp  compiler.hpp  diagnostics.hpp  emitter.hpp  ir.hpp  lexer.hpp  lowering.hpp  optimizer.hpp  parser.hpp  regalloc.hpp  semantic.hpp  source.hpp  token.hpp
src/: compiler.cpp  diagnostics.cpp  emitter.cpp  ir.cpp  lexer.cpp  lowering.cpp  main.cpp  optimizer.cpp  parser.cpp  regalloc.cpp  semantic.cpp  source.cpp
tests/: assemble_and_run.cmake  build_sysv_object.cmake  package_verify.cmake  run_and_verify.cmake  run_production.cmake  verify_asm.cmake
